# sdaccel_cmake_simple

./: .gitignore  CMakeLists.txt  readme.md
kernels/: VectorizationHelper.h  kernel_addition.cpp
scripts/: autobuild_hw.sh  autobuild_hwemu.sh  autobuild_swemu.sh  launch_hwemu.sh  launch_swemu.sh  sdaccel.ini  slr_report.tcl
src/: MyHostExecutable.cpp
